fix: top nav on mobile

--- a/public/assets/ssr.css
+++ b/public/assets/ssr.css
@@ -59,7 +59,7 @@ select {
 
 .ssr-page-container {
     width: 100%;
-    max-width: 1600px;
+    max-width: min(1600px, 100vw);
     margin: 0 auto;
 }
 
@@ -176,6 +176,60 @@ select {
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url("./replays.svg");
+}
+
+.dropdown-menu {
+    display: none;
+    left: 0;
+    right: 0;
+    width: 100%;
+    max-height: 20rem;
+    overflow-y: auto;
+    background-color: var(--background);
+    border: 1px solid var(--dimmed);
+    border-radius: .25rem;
+    padding: 0;
+}
+
+.dropdown-menu.left {
+    left: auto;
+}
+
+.dropdown-menu.shown {
+    display: block;
+}
+
+.dropdown-menu::-webkit-scrollbar {
+    width: .25rem;
+}
+body::-webkit-scrollbar-track {
+    background: var(--foreground, #fff);
+}
+.dropdown-menu::-webkit-scrollbar-thumb {
+    background-color: var(--selected, #3273dc) ;
+    border-radius: 6px;
+    border: 3px solid var(--selected, #3273dc);
+}
+
+.dropdown-menu .dropdown-content {
+    color: var(--textColor);
+    background-color: var(--background);
+    padding: 0;
+}
+
+.dropdown-menu .dropdown-item {
+    color: inherit;
+    text-align: left;
+    cursor: pointer;
+}
+
+.dropdown-menu .dropdown-item:hover {
+    background-color: var(--selected);
+}
+
+.dropdown-content .menu-label {
+    padding: .5em;
+    font-size: 1em;
 }
 
 .grid-transition-helper {
